# vehicle_interface

./: .gitignore  .gitmodules  README.md
ttm_vehicle_interface_ptype_app/: CMakeLists.txt  a.out  client
ttm_vehicle_interface_ptype_app/include/: base.h  mabx_data_udp.h  ttm_client_tcp.h  ttm_data_udp.h
ttm_vehicle_interface_ptype_app/modules/inter_processor_streams/: parking_infrastructure_streams.h
ttm_vehicle_interface_ptype_app/modules/logging/: CMakeLists.txt  README.md
ttm_vehicle_interface_ptype_app/modules/logging/include/logging/: additional_logging_levels.h  log.h  standard_output_sink.h
ttm_vehicle_interface_ptype_app/modules/logging/src/: log.cc  standard_output_sink.cc
ttm_vehicle_interface_ptype_app/modules/ttm/: message_type.h
ttm_vehicle_interface_ptype_app/modules/udp/: udp_record.h
ttm_vehicle_interface_ptype_app/src/: base.cc  mabx_data_udp.cc  main.cc  ttm_client_tcp.cc  ttm_data_udp.cc
